Fixed x-overflow on pages by removing a set width of 100vw from #courses

--- a/docs/digit_style.css
+++ b/docs/digit_style.css
@@ -273,7 +273,6 @@ footer a{
 	background-attachment:fixed;
 	-webkit-background-size: cover;
 	background-size: cover;
-	width: 100vw;
 }
 
 /* SVG Road Map Here */
